# sokgo

./: .gitignore  INSTALL.txt  README.md
prj/ac-dotnet/: Makefile.am  autogen.sh  configure.ac
prj/ac-dotnet/src/: Makefile.am  sokgo.in
prj/ac-mono/: Makefile.am  autogen.sh  configure.ac
prj/ac-mono/get_IPV6_V6ONLY/: Makefile.am  get_IPV6_V6ONLY.c
prj/ac-mono/init/: Makefile.am  sokgo.in
prj/ac-mono/src/: Makefile.am
prj/md2/: Sokgo.csproj  Sokgo.sln
prj/vs10/: Sokgo.csproj  Sokgo.sln
prj/vs17/: Sokgo.csproj  Sokgo.sln
prj/vs17/Properties/: launchSettings.json
prj/vs9/: Sokgo.csproj  Sokgo.sln
prj/vsc/: Sokgo.code-workspace
src/: SocketMono.cs  Sokgo.cs  SokgoUnix.cs  SokgoWin32.cs  Trace.cs  app.config
src/Arguments/: README.TXT  URL.TXT
src/Controller/: ControlClient.cs  ControlEnum.cs  ControlServer.cs
src/IPFilter/: IPFilter.cs  IPFilterLocal.cs
src/PortMapping/: PortMapping.cs  PortRange.cs  SocketBindPortRange.cs
src/Properties/: AssemblyInfo.cs  BuildId-update.sh  BuildId.cs  BuildId.cs.in  README.txt
src/Socks5/: Socks5Config.cs  Socks5Connector.cs  Socks5ConnectorFactory.cs  Socks5ConnectorTcp.cs  Socks5ConnectorUdp.cs  Socks5Dns.cs  Socks5Enum.cs  Socks5IPEndPointReader.cs  Socks5IPEndPointWriter.cs  Socks5Server.cs  Socks5Session.cs  Socks5SessionGroup.cs  Socks5SocketList.cs
