#
#	Copyright (C) 2011,2012,2013,2024 X.Gerbier
#
#	This file is part of Sokgo.
#
#	Sokgo is free software: you can redistribute it and/or modify
#	it under the terms of the GNU General Public License as published by
#	the Free Software Foundation, either version 3 of the License, or
#	(at your option) any later version.
#
#	Sokgo is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#
#	You should have received a copy of the GNU General Public License
#	along with Sokgo.  If not, see <http://www.gnu.org/licenses/>.
#

TARGET=$(PACKAGE)$(TARGET_EXT)
CONFIG=$(PACKAGE)$(TARGET_EXT).config
COMMON_CONFIG=$(PACKAGE).config

get_IPV6_V6ONLY= ../get_IPV6_V6ONLY/get_IPV6_V6ONLY
IPV6_V6ONLY:= $(shell $(get_IPV6_V6ONLY))

CSC_REFS= System.Configuration.dll
CSC_FLAGS= -define:MONO
if MONO_LT_4_1
# NOTE : no indentation here
# Mono version < 4.1 : SocketOptionName.IPV6Only not defined
CSC_FLAGS+= -define:MONO_LT_4_1
endif
if DEBUG
# NOTE : no indentation here
CSC_FLAGS+= -debug -define:DEBUG -define:TRACE
endif

bin_dir_cs= ../bin
tmp_dir_cs= ../tmp
src_dir_cs= .
src_cs_wildcards=		\
	*.cs				\
	Arguments/*.cs		\
	Controller/*.cs		\
	IPFilter/*.cs		\
	PortMapping/*.cs	\
	Properties/AssemblyInfo.cs	\
	Socks5/*.cs
src_dist_wildcards=		\
	*.cs				\
	app.config			\
	sokgo.in			\
	Arguments/*			\
	Controller/*		\
	IPFilter/*			\
	PortMapping/*		\
	Properties/*		\
	Socks5/*

tmp_dir_dummy= $(tmp_dir_cs)/.dummy
bin_dir_dummy= $(bin_dir_cs)/.dummy

# function find_src_files dirs wildcard
find_src_files= $(wildcard $(addsuffix /$(strip $(2)), $(foreach dir, $(1), $(addprefix $(src_dir_cs)/, $(dir)))))

# function find_files wildcards
find_files= $(wildcard $(foreach dir, $(1), $(addprefix $(src_dir_cs)/, $(dir))))

# retrieve all cs files
all_src_cs= $(call find_files, $(src_cs_wildcards))
all_dist= $(call find_files, $(src_dist_wildcards))
# rewrite sokgo.exe.config only if it does not exist in dest dir (pkgdatadir)
all_target= $(addprefix $(bin_dir_cs)/, $(TARGET) $(if $(wildcard $(pkgdatadir)/$(CONFIG)), , $(CONFIG)))

# exclude "SokgoUnix.cs" from all_src_cs (will be modified and copied in tmp dir)
src_cs= $(foreach csfile, $(all_src_cs), $(if $(findstring /SokgoUnix.cs, $(csfile)), , $(csfile)))

update_build_id= $(src_dir_cs)/Properties/BuildId-update.sh
src_build_id_cs= $(src_dir_cs)/Properties/BuildId.cs
src_build_id_cs_in= $(src_dir_cs)/Properties/BuildId.cs.in

src_sokgounix_cs= $(src_dir_cs)/SokgoUnix.cs
tmp_sokgounix_cs= $(tmp_dir_cs)/SokgoUnix.cs

build_src_cs= $(src_cs) $(tmp_sokgounix_cs) $(src_build_id_cs)
build_src_cs_in= $(src_cs) $(tmp_sokgounix_cs) $(src_build_id_cs_in)

bin_SCRIPTS= $(bin_dir_cs)/$(PACKAGE)
EXTRA_SCRIPTS=

pkgdata_DATA= $(all_target)

EXTRA_DIST= $(all_dist)

CLEANFILES= $(pkgdata_DATA) $(bin_SCRIPTS)

do_subst= $(SED) -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'		\
				 -e 's,[@]RUNTIME[@],$(RUNTIME),g'				\
				 -e 's,[@]PACKAGE[@],$(PACKAGE),g'				\
				 -e 's,[@]TARGET_EXT[@],$(TARGET_EXT),g'

define mkdir-dummy
	$(MKDIR_P) $(@D)
	@echo -n > $@
endef

$(tmp_dir_dummy) :
	$(mkdir-dummy)

$(bin_dir_dummy) :
	$(mkdir-dummy)

$(tmp_sokgounix_cs) : $(src_sokgounix_cs) Makefile | $(tmp_dir_dummy)
	$(info IPV6_V6ONLY= $(IPV6_V6ONLY))
	$(SED) -e 's,\(IPV6_V6ONLY[ \t]*=[ \t]*\)[0-9]\+[ \t]*;,\1$(IPV6_V6ONLY);\t\/\/ IPV6_V6ONLY value generated by configure script ($(IPV6_V6ONLY)) - DO NOT EDIT,' $< > $@

$(bin_dir_cs)/$(PACKAGE) : $(src_dir_cs)/$(PACKAGE).in Makefile | $(bin_dir_dummy)
	$(do_subst) < $< > $@
	chmod +x $@

$(bin_dir_cs)/$(TARGET) : $(build_src_cs_in) $(update_build_id) | $(bin_dir_dummy)
	$(SHELL) $(update_build_id)
	$(CSC) $(CSC_FLAGS) -target:exe -r:$(CSC_REFS) \
		$(build_src_cs) -out:$@

$(bin_dir_cs)/$(CONFIG) : $(src_dir_cs)/app.config | $(bin_dir_dummy)
	cp $< $@

install-data-hook :
	test -d "$(sysconfdir)" || $(MKDIR_P) "$(sysconfdir)"
	$(LN_S) -f $(pkgdatadir)/$(CONFIG) $(sysconfdir)/$(COMMON_CONFIG)
	chmod u+x $(pkgdatadir)/*.exe

uninstall-hook :
	rm -f $(sysconfdir)/$(COMMON_CONFIG)
